--- a/HelloVS/HelloVS.vcxproj.filters
+++ b/HelloVS/HelloVS.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="ex3-5.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ex4-1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ex3~4.h">
