--- a/HelloVS/HelloVS.vcxproj.filters
+++ b/HelloVS/HelloVS.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="ex4-3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ex5-1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ex3~4.h">
