--- a/HelloVS/HelloVS.vcxproj.filters
+++ b/HelloVS/HelloVS.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="ex6-2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="6-3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ex3~4.h">
