--- a/HelloVS/HelloVS.vcxproj.filters
+++ b/HelloVS/HelloVS.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="example 6-1.cpp">
       <Filter>소스 파일\Example</Filter>
     </ClCompile>
+    <ClCompile Include="ex7-4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ex3~4.h">
