--- a/HelloVS/HelloVS.vcxproj
+++ b/HelloVS/HelloVS.vcxproj
@@ -118,7 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="8-1.cpp" />
+    <ClCompile Include="ex8-1.cpp" />
     <ClCompile Include="ex6-3.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
