--- a/HelloVS/HelloVS.vcxproj.filters
+++ b/HelloVS/HelloVS.vcxproj.filters
@@ -51,7 +51,7 @@
     <ClCompile Include="ex7-6.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="8-1.cpp">
+    <ClCompile Include="ex8-1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
